<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    tools:context=".MainActivity">



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/bgcolor">
        <LinearLayout
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:id="@+id/ll"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/city"
                android:layout_gravity="center_horizontal"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/city"
                app:srcCompat="@drawable/baseline_location_city_black_18dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:text="@string/personal_notes"
                android:textColor="@color/db"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:id="@+id/ll1">

            <ImageView
                android:id="@+id/social"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/social"
                app:srcCompat="@drawable/baseline_local_bar_black_18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center"
                android:text="@string/public_notes"
                android:textColor="@color/db"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="130dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/travel"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/travel"
                app:srcCompat="@drawable/baseline_directions_boat_black_18dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/office_notes"
                android:textColor="@color/db"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        app:cardBackgroundColor="@color/bgcolor">
        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="225dp"
            android:layout_marginStart="200dp"
            android:layout_marginEnd="20dp"
            android:background="@color/db"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/lany"
                app:srcCompat="@drawable/hp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="198dp"
            android:layout_marginTop="238dp"
            android:layout_marginStart="200dp"
            android:layout_marginEnd="20dp"
            android:background="@color/g"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/audi"
                android:layout_width="match_parent"
                android:layout_height="119dp"
                android:contentDescription="@string/audi"
                app:srcCompat="@drawable/audi" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/maroon_5"
                android:textColor="@color/db"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/she_will_be_loved"
                android:textColor="@color/db"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="162dp"
            android:layout_height="170dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="265dp"
            android:background="@color/lb"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Taking Me Back"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/malibu_nights"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="162dp"
            android:layout_height="250dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="29dp"
            android:layout_marginBottom="18dp"
            android:background="@color/b"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="LANY MNL"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i_ve_got_way_too_much_time_to_be_this_hurt_somebody_help_it_s_getting_worse_no_one_even_has_to_know_i_m_dealing_with_it_on_my_own"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>